cursive-bootstrap/tests/ui/E-CON/E-CON-0017.cursive
// RUN: compile-fail
// DIAG: E-CON-0017
// SPEC: 8.9
// DESC: release modifier without target mode

record Counter {
    var value: i32
}

procedure bad_release(c: shared Counter) -> () {
    # release c {  //~ ERROR E-CON-0017: release without target mode
        let x: i32 = 0
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
